--- a/rag-gym-impl/pyproject.toml
+++ b/rag-gym-impl/pyproject.toml
@@ -8,12 +8,18 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "langchain>=0.2.0",
+    "langchain-openai>=0.1.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [tool.poetry]
 packages = [
     {include = "rag_gym_impl", from = "src"},
 ]
+
+[tool.poetry.group.dev.dependencies]
+pytest = ">=8.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
