--- a/rag-gym-impl/pyproject.toml
+++ b/rag-gym-impl/pyproject.toml
@@ -20,6 +20,7 @@ packages = [
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.0.0"
+debugpy = "<2.0.0"
 
 [tool.pytest.ini_options]
 markers = [
