--- a/rag-gym-impl/pyproject.toml
+++ b/rag-gym-impl/pyproject.toml
@@ -6,11 +6,12 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "langchain>=0.2.0",
     "langchain-openai>=0.1.0",
     "python-dotenv>=1.0.0",
+    "ragflow-sdk>=0.1.0",
 ]
 
 [tool.poetry]
